Proofed and edited translations from SA 11-12.

--- a/01_agama/samyukta/11/SA11_41.md
+++ b/01_agama/samyukta/11/SA11_41.md
@@ -69,7 +69,7 @@ next: SA11_58.html
 
 ### Notes
 
-1. {:#n1} This sūtra has too many parallels that contain lists of the Tathāgata’s powers to list, but examples among early Buddhist sources include [SN 22.58](https://suttacentral.net/sn22.58){:target="_blank"}, [AN 6.64](https://suttacentral.net/an6.64){:target="_blank"}, [AN 10.21](https://suttacentral.net/an10.21){:target="_blank"}, [MN 12](https://suttacentral.net/mn12){:target="_blank"}, [EĀ 46.4](../../ekottarika/46/EA_46_04.html){:target="_blank"}, SĀ 11.43-44, [SA 11.58](SA11_58.html){:target="_blank"}, [T757](..\..\..\09_other_sutras\T757.html#p22){:target="_blank"}, [T780](..\..\..\09_other_sutras\T780.html){:target="_blank"}, [T781](..\..\..\09_other_sutras\T781.html){:target="_blank"}, and [T802](..\..\..\09_other_sutras\T802.html){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This sutras has a number of different parallels. [SN 22.58](https://suttacentral.net/sn22.58){:target="_blank"} shares the subject of the difference between the Tathagata and an arhat liberated by wisdom, but it lacks the recitation of powers. [AN 6.64](https://suttacentral.net/an6.64){:target="_blank"} presents a list of six powers of the Tathagata, and it includes a very similar refrain to each such as the mention of a “Brahma wheel.” [AN 10.21](https://suttacentral.net/an10.21){:target="_blank"} contains a list of ten powers and a similar refrain, as do [MN 12](https://suttacentral.net/mn12){:target="_blank"}, [EĀ 46.4](../../ekottarika/46/EA_46_04.html){:target="_blank"}, SĀ 11.43-44, [SĀ 11.58](SA11_58.html){:target="_blank"}, [T757](..\..\..\09_other_sutras\T757.html#p22){:target="_blank"}, [T780](..\..\..\09_other_sutras\T780.html){:target="_blank"}, [T781](..\..\..\09_other_sutras\T781.html){:target="_blank"}, and [T802](..\..\..\09_other_sutras\T802.html){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
