--- a/01_agama/samyukta/11/SA11_58.md
+++ b/01_agama/samyukta/11/SA11_58.md
@@ -51,7 +51,7 @@ next: ../12/index.html
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with numerous Buddhist sources that contain some or all of the ten powers of the Tathāgata. Some early Buddhist parallels include [SN 22.58](https://suttacentral.net/sn22.58){:target="_blank"}, [AN 6.64](https://suttacentral.net/an6.64){:target="_blank"}, [AN 10.21](https://suttacentral.net/an10.21){:target="_blank"}, [MN 12](https://suttacentral.net/mn12){:target="_blank"}, [EĀ 46.4](../../ekottarika/46/EA_46_04.html){:target="_blank"}, SĀ 11.43-44, [SA 11.41](SA11_41.html){:target="_blank"}, [T757](..\..\..\09_other_sutras\T757.html#p22){:target="_blank"}, [T780](..\..\..\09_other_sutras\T780.html){:target="_blank"}, [T781](..\..\..\09_other_sutras\T781.html){:target="_blank"}, and [T802](..\..\..\09_other_sutras\T802.html){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This sūtra is parallel with numerous Buddhist sources that contain some or all of the ten powers of the Tathāgata. Some early Buddhist parallels include [AN 6.64](https://suttacentral.net/an6.64){:target="_blank"}, [AN 10.21](https://suttacentral.net/an10.21){:target="_blank"}, [MN 12](https://suttacentral.net/mn12){:target="_blank"}, [EĀ 46.4](../../ekottarika/46/EA_46_04.html){:target="_blank"}, SĀ 11.43-44, [SA 11.41](SA11_41.html){:target="_blank"}, [T757](..\..\..\09_other_sutras\T757.html#p22){:target="_blank"}, [T780](..\..\..\09_other_sutras\T780.html){:target="_blank"}, [T781](..\..\..\09_other_sutras\T781.html){:target="_blank"}, and [T802](..\..\..\09_other_sutras\T802.html){:target="_blank"}. [\[back\]](#ref1)
 2. {:#n2} The Chinese translator abbreviated the recitation of the ten powers, referring the reader back to the full text found in [SĀ 11.41](SA11_41.html){:target="_blank"} above. I’ve expanded the abbreviation using the text from that sūtra and placed the addition in brackets. [\[back\]](#ref2)
 
 ---
