--- a/01_agama/samyukta/12/SA12_21.md
+++ b/01_agama/samyukta/12/SA12_21.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 12. Factors of Awakening | 21. Fruitful Monks'
+title: 'The Related Discourses | 12. Factors of Awakening | 21 (724). Fruitful Monks'
 type: kramdown
 base: ../../../
 previous: SA12_20.html
@@ -9,22 +9,28 @@ next: SA12_30.html
 
 # [The Related Discourses](../index.html)
 ## [12. Factors of Awakening](index.html)
-### 21. Fruitful Monks
+### 21 (724). Fruitful Monks
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada Park in Jeta Grove in Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove in Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “If a monk observes precepts and cultivates virtue, conscience, and modesty, he’ll achieve the true teaching. Seeing this person will often be fruitful. If he’s also heard, followed in memory, and followed into homelessness, it will often bring virtue. It’s even more so to associate with, honor, and serve him. Why is that? Associating with and serving such a person, a monk can hear the profound and subtle Dharma from time to time. After hearing the profound Dharma, he’ll achieve the two ways of being correct: correctness of body and correctness of mind. He’ll skillfully cultivate the awakening factor of concentration. After cultivating it, he’ll cultivate its fulfillment … he’ll cultivate the fulfillment of the awakening factor of equanimity.”
+2\. It was then that the Bhagavān addressed the monks, “If a monk observes precepts and cultivates virtue, conscience, and modesty, he’ll achieve the true teaching. Seeing this person will often be fruitful. If he’s also heard, followed in memory, and followed into homelessness, it will often bring virtue. It’s even more so to associate with, honor, and serve him. Why is that? Associating with and serving such a person, a monk can hear the profound and subtle Dharma from time to time. After hearing the profound Dharma, he’ll achieve the two ways of being correct: correctness of body and correctness of mind. He’ll skillfully cultivate the awakening factor of samādhi. After cultivating it, he’ll cultivate its fulfillment … he’ll cultivate the fulfillment of the awakening factor of equanimity.”
 {: #p2}
 
-3\. After the Buddha taught this sūtra, the monks who heard what he taught rejoiced and approved.
+3\. After the Buddha spoke this sūtra, the monks who heard what he taught rejoiced and approved.
 {: #p3}
+
+---
+
+### Notes
+
+1. {:#n1} This sūtra is parallel with [SN 46.3](https://suttacentral.net/sn46.3){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 16 October 2022
 {: .revised}
 
 ---
