--- a/01_agama/samyukta/12/SA12_33.md
+++ b/01_agama/samyukta/12/SA12_33.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 12. Factors of Awakening | 33. Seven Fruits'
+title: 'The Related Discourses | 12. Factors of Awakening | 33 (736). Seven Fruits'
 type: kramdown
 base: ../../../
 previous: SA12_30.html
@@ -9,20 +9,38 @@ next: SA12_34.html
 
 # [The Related Discourses](../index.html)
 ## [12. Factors of Awakening](index.html)
-### 33. Seven Fruits
+### 33 (736). Seven Fruits
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada Park in Jeta Grove in Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove in Śrāvastī.
 {: #p1}
-2\. *Like 12.30 above except for this:* “Suppose a monk cultivates the seven factors of awakening. After often cultivating them, he’ll attain seven kinds of fruit and seven kinds of benefit. What are the seven? This monk will attain knowledge in the present life and realize happiness. If he hasn’t attained knowledge in the present life and realized happiness when his life ends, he’ll attain the end of the five lower bonds when it ends, and then he’ll attain parinirvāṇa in the interim. If he doesn’t attain parinirvāṇa in the interim, then he’ll attain parinirvāṇa at birth. If he doesn’t attain parinirvāṇa at birth, then he’ll attain parinirvāṇa without practice. If he doesn’t attain parinirvāṇa without practice, then he’ll attain parinirvāṇa with practice. If he doesn’t attain parinirvāṇa with practice, then he’ll attain parinirvāṇa upstream.”
+
+2\. [There was a certain monk then who came to visit the Buddha. He bowed his head at his feet, withdrew to one side, and said to the Buddha, “The Bhagavān says ‘factors of awakening.’ Bhagavān, what are the factors of awakening?”]
 {: #p2}
-3\. After the Buddha taught this sūtra, that certain monk who heard what he taught rejoiced and approved.
+
+[The Buddha told the monk, “The expression ‘factors of awakening’ refers to seven factors of the path, but monks gradually produce these seven factors of awakening by cultivating their fulfillment.”]
+
+
+3\. [That monk said to the Buddha, “Bhagavān, how are these factors of awakening gradually produced by cultivating their fulfillment?”] [\[2\]](#n2){:#ref2}
 {: #p3}
+
+4\. “Suppose a monk cultivates the seven factors of awakening. After often cultivating them, he’ll attain seven kinds of fruit and seven kinds of benefit. What are the seven? This monk will attain knowledge in the present life and realize happiness. If he hasn’t attained knowledge in the present life and realized happiness when his life ends, he’ll attain the end of the five lower bonds when it ends, and then he’ll attain parinirvāṇa in the interim. If he doesn’t attain parinirvāṇa in the interim, then he’ll attain parinirvāṇa at birth. If he doesn’t attain parinirvāṇa at birth, then he’ll attain parinirvāṇa without practice. If he doesn’t attain parinirvāṇa without practice, then he’ll attain parinirvāṇa with practice. If he doesn’t attain parinirvāṇa with practice, then he’ll attain parinirvāṇa upstream.”
+{: #p4}
+
+5\. After the Buddha spoke this sūtra, that certain monk who heard what he taught rejoiced and approved.
+{: #p5}
+
+---
+
+### Notes
+
+1. {:#n1} This sūtra is parallel with [SN 46.3](https://suttacentral.net/sn46.3){:target="_blank"}. [\[back\]](#ref1)
+2. {:#n2} The Chinese translator abbreviated the introduction to this sūtra, indicating that it’s identical to that of [SĀ 12.30](SA12_30.html){:target="_blank"} above. I’ve expanded the abbreviation and placed it in brackets. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 22 October 2022
 {: .revised}
 
 ---
