--- a/01_agama/samyukta/12/SA12_37.md
+++ b/01_agama/samyukta/12/SA12_37.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 12. Factors of Awakening | 37. Seven Fruits'
+title: 'The Related Discourses | 12. Factors of Awakening | 37 (740). Seven Fruits'
 type: kramdown
 base: ../../../
 previous: SA12_34.html
@@ -9,22 +9,41 @@ next: ../13/index.html
 
 # [The Related Discourses](../index.html)
 ## [12. Factors of Awakening](index.html)
-### 37. Seven Fruits
+### 37 (740). Seven Fruits
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada Park in Jeta’s Grove in Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove in Śrāvastī.
 {: #p1}
 
-2\. *Like 12.34 above except for this:* “Suppose a monk cultivates the seven factors of awakening. After often cultivating them, he’ll attain seven fruits. What are the seven? This refers to nirvāṇa with remainder when he attains knowledge in the present life and [nirvāṇa] at his life’s end when he doesn’t attain knowledge in the present life. If that isn’t the case, he’ll end the five lower bonds and attain parinirvāṇa in the interim. If that’s not the case, then he’ll attain parinirvāṇa at birth. If that’s not the case, he’ll attain parinirvāṇa without practice. If that’s not the case, he’ll attain parinirvāṇa with practice. If that’s not the case, he’ll attain parinirvāṇa upstream.”
+2\. [It was then that the Bhagavān addressed the monks, “There’s what’s called the factors of awakening. What are the factors of awakening?”]
 {: #p2}
 
-3\. After the Buddha taught this sūtra, the monks who heard what he taught rejoiced and approved.
+3\. [The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma refuge! Please explain it for us. After we hear it, the monks will accept and approve of it.”]
 {: #p3}
+
+4\. [The Buddha addressed the monks, “The seven factors of awakening are seven factors of the path. Monks, these seven factors of awakening are gradually produced in sequence. After they are gradually produced in sequence, their fulfillment is cultivated.”]
+{: #p4}
+
+5\. [The monks said to the Buddha, “How are the seven factors of awakening, which are gradually produced in sequence, fulfilled after they’ve been produced?”] [\[2\]](#n2){:#ref2}
+{: #p5}
+
+6\. “Suppose a monk cultivates the seven factors of awakening. After often cultivating them, he’ll attain seven fruits. What are the seven? This refers to nirvāṇa with remainder when he attains knowledge in the present life and [nirvāṇa] at his life’s end when he doesn’t attain knowledge in the present life. If that isn’t the case, he’ll end the five lower bonds and attain parinirvāṇa in the interim. If that’s not the case, then he’ll attain parinirvāṇa at birth. If that’s not the case, he’ll attain parinirvāṇa without practice. If that’s not the case, he’ll attain parinirvāṇa with practice. If that’s not the case, he’ll attain parinirvāṇa upstream.”
+{: #p6}
+
+7\. After the Buddha spoke this sūtra, the monks who heard what he taught rejoiced and approved.
+{: #p7}
+
+---
+
+### Notes
+
+1. {:#n1} This sūtra is shares the seven fruits passage with [SN 46.3](https://suttacentral.net/sn46.3){:target="_blank"}. [\[back\]](#ref1)
+2. {:#n2} The Chinese translator abbreviated the introduction, noting that it’s identical with [SĀ 12.34](SA12_34.html){:target="_blank"} above. I’ve expanded the abbreviation accordingly and placed the added material in brackets. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 23 October 2022
 {: .revised}
 
 ---
