--- a/01_agama/samyukta/12/SA12_20.md
+++ b/01_agama/samyukta/12/SA12_20.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 12. Factors of Awakening | 20. Junior Monks'
+title: 'The Related Discourses | 12. Factors of Awakening | 20 (723). Junior Monks'
 type: kramdown
 base: ../../../
 previous: index.html
@@ -9,9 +9,9 @@ next: SA12_21.html
 
 # [The Related Discourses](../index.html)
 ## [12. Factors of Awakening](index.html)
-### 20. Junior Monks
+### 20 (723). Junior Monks
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada Park in Jeta Grove in Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove in Śrāvastī.
 {: #p1}
 
 2\. It was then that the Bhagavān addressed the monks, “It’s good, monks, to rely on someone to hear the Dharma. Junior monks are to support and serve the venerable elders. Why is that? From time to time, junior monks who support and serve senior monks can hear the profound and subtle Dharma. After hearing the profound Dharma, they’ll achieve two ways of being correct: Correctness of body and correctness of mind.
@@ -20,14 +20,20 @@ next: SA12_21.html
 3\. “At that point, they’ll cultivate the awakening factor of mindfulness. After cultivating the awakening factor of mindfulness, they’ll fulfill the awakening factor of mindfulness. After fulfilling the awakening factor of mindfulness, they’ll discriminate qualities, discern qualities, and deliberate on qualities. At that point, they’ll skillfully cultivate the awakening factor of discriminating qualities … they’ll cultivate the fulfillment of the awakening factor of equanimity.”
 {: #p3}
 
-4\. After the Buddha taught this sūtra, the monks who heard what he taught rejoiced and approved.
+4\. After the Buddha spoke this sūtra, the monks who heard what he taught rejoiced and approved.
 {: #p4}
+
+---
+
+### Notes
+
+1. {:#n1} This sūtra is parallel with [SN 46.3](https://suttacentral.net/sn46.3){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 16 October 2022
 {: .revised}
 
 ---
