--- a/01_agama/samyukta/12/SA12_30.md
+++ b/01_agama/samyukta/12/SA12_30.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 12. Factors of Awakening | 30. A Certain Monk'
+title: 'The Related Discourses | 12. Factors of Awakening | 30 (733). A Certain Monk'
 type: kramdown
 base: ../../../
 previous: SA12_21.html
@@ -9,32 +9,40 @@ next: SA12_33.html
 
 # [The Related Discourses](../index.html)
 ## [12. Factors of Awakening](index.html)
-### 30. A Certain Monk
+### 30 (733). A Certain Monk
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada Park in Jeta Grove in Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove in Śrāvastī.
 {: #p1}
 
 2\. There was a certain monk then who came to visit the Buddha. He bowed his head at his feet, withdrew to one side, and said to the Buddha, “The Bhagavān says ‘factors of awakening.’ Bhagavān, what are the factors of awakening?”
-The Buddha told the monk, “The expression ‘factors of awakening’ refers to seven factors of the path, but monks gradually produce these seven factors of awakening by cultivating their fulfillment.”
 {: #p2}
+
+The Buddha told the monk, “The expression ‘factors of awakening’ refers to seven factors of the path, but monks gradually produce these seven factors of awakening by cultivating their fulfillment.”
+
 
 3\. That monk said to the Buddha, “Bhagavān, how are these factors of awakening gradually produced by cultivating their fulfillment?”
 {: #p3}
 
-4\. The Buddha told the monk, “Suppose a monk mindfully abides observing the internal body as body. When he mindfully abides observing the internal body as body, he collects his mind, ties it to mindfulness, and doesn’t forget it. At that point, he skillfully cultivates the awakening factor of mindfulness. After skillfully cultivating the awakening factor of mindfulness, he cultivates its fulfillment. After fulfilling the awakening factor of mindfulness, he discriminates qualities and discerns and deliberates on them. At that point, he cultivates skill in the awakening factor of discriminating qualities. After cultivating it skillfully, he’ll cultivate its fulfillment. *It’s thus up* to he’ll cultivate the fulfillment of the awakening factor of equanimity.
+4\. The Buddha told the monk, “Suppose a monk mindfully abides observing the internal body as body. When he mindfully abides observing the internal body as body, he collects his mind, ties it to this mindfulness, and doesn’t forget it. At that point, he skillfully cultivates the awakening factor of mindfulness. After skillfully cultivating the awakening factor of mindfulness, he cultivates its fulfillment. After fulfilling the awakening factor of mindfulness, he discriminates qualities and discerns and deliberates on them. At that point, he cultivates skill in the awakening factor of discriminating qualities. After cultivating it skillfully, he’ll cultivate its fulfillment … he’ll cultivate the fulfillment of the awakening factor of equanimity.
 {: #p4}
 
-5\. “As he mindfully abides contemplating the inner body as body, he thus mindfully abides observing the external body … internal and external body … feelings … mind … and principles as principles. At that point, he focuses his mind, ties it to mindfulness, and doesn’t forget it. *Up to the awakening factor of equanimity is also thus explained.* Someone who thus abides will gradually produce the factors of awakening. After gradually producing them, he cultivates their fulfillment.”
+5\. “As he mindfully abides contemplating the internal body as body, he thus mindfully abides observing the external body … internal and external body … feelings … mind … and principles as principles. At that point, he focuses his mind, ties it to this mindfulness, and doesn’t forget it … the awakening factor of equanimity. Someone who thus abides will gradually produce the factors of awakening. After gradually producing them, he cultivates their fulfillment.”
 {: #p5}
 
-6\. After the Buddha taught this sūtra, the monks who heard what he taught rejoiced and handed it down.
+6\. After the Buddha spoke this sūtra, the monks who heard what he taught rejoiced and approved.
 {: #p6}
+
+---
+
+### Notes
+
+1. {:#n1} This sūtra is parallel with [SN 46.5](https://suttacentral.net/sn46.5){:target="_blank"} and [SĀ 12.34](SA12_34.html){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 22 October 2022
 {: .revised}
 
 ---
