--- a/01_agama/samyukta/12/SA12_34.md
+++ b/01_agama/samyukta/12/SA12_34.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 12. Factors of Awakening | 34. Abodes of Mindfulness'
+title: 'The Related Discourses | 12. Factors of Awakening | 34 (737). Abodes of Mindfulness'
 type: kramdown
 base: ../../../
 previous: SA12_33.html
@@ -9,40 +9,48 @@ next: SA12_37.html
 
 # [The Related Discourses](../index.html)
 ## [12. Factors of Awakening](index.html)
-### 34. Abodes of Mindfulness
+### 34 (737). Abodes of Mindfulness
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada Park in Jeta Grove in Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove in Śrāvastī.
 {: #p1}
 
 2\. It was then that the Bhagavān addressed the monks, “There’s what’s called the factors of awakening. What are the factors of awakening?”
 {: #p2}
 
-3\. The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma refuge. Please explain it for us! After we hear it, the monks will accept it and hand it down.”
+3\. The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma refuge! Please explain it for us. After we hear it, the monks will accept and approve of it.”
 {: #p3}
 
 4\. The Buddha addressed the monks, “The seven factors of awakening are seven factors of the path. Monks, these seven factors of awakening are gradually produced in sequence. After they are gradually produced in sequence, their fulfillment is cultivated.”
 {: #p4}
 
-5\. The monks said to the Buddha, “What are the seven factors of awakening that are gradually produced in sequence and fulfilled after they are gradually produced in sequence?”
+5\. The monks said to the Buddha, “The monks said to the Buddha, “How are the seven factors of awakening, which are gradually produced in sequence, fulfilled after they’ve been produced?”
 {: #p5}
 
-6\. “Suppose a monk abides mindfully contemplating body as body. After he abides mindfully contemplating body as body, he focuses his mind, ties it to mindfulness, and doesn’t forget it. At that point, he’s skillfully cultivating the awakening factor of mindfulness. After skillfully cultivating the awakening factor of mindfulness, he cultivates its fulfillment.
+6\. “Suppose a monk abides mindfully contemplating [internal] body as body. After he abides mindfully contemplating [internal] body as body, he focuses his mind, ties it to this mindfulness, and doesn’t forget it. At that point, he’s skillfully cultivating the awakening factor of mindfulness. After skillfully cultivating the awakening factor of mindfulness, he cultivates its fulfillment.
 {: #p6}
 
 7\. “After cultivating the awakening factor of mindfulness, he discriminates qualities. At that point, he’s cultivating skill in the awakening factor of discriminating qualities. After cultivating the awakening factor of discriminating qualities skillfully, he cultivates its fulfillment.
 {: #p7}
 
-8\. *So it is with the awakening factors of effort, joy, calm, concentration, and equanimity. They are likewise explained. Like the internal body, thus are the external body, internal and external body, feelings, mind, and principles explained.* “He abides mindfully contemplating principles as principles. He focuses his mind, ties it to mindfulness, and doesn’t forget it. At that point, he’s skillfully cultivating the awakening factor of mindfulness. After skillfully cultivating the awakening factor of mindfulness, he cultivates its fulfillment *up to the awakening factor of equanimity, which is likewise explained.* This is called a monk who gradually produces the seven factors of awakening in sequence. After they are gradually produced in sequence, he cultivates their fulfillment.”
+8\. *The awakening factors of effort, joy, calm, samādhi, and equanimity are likewise explained. Like the mindfulness of the internal body, thus are the external body, internal and external body, feelings, mind, and principles explained.* [\[2\]](#n2){:#ref2} “He abides mindfully contemplating principles as principles. He focuses his mind, ties it to this mindfulness, and doesn’t forget it. At that point, he’s skillfully cultivating the awakening factor of mindfulness. After skillfully cultivating the awakening factor of mindfulness, he cultivates its fulfillment *up to the awakening factor of equanimity, which is likewise explained.* This is called a monk who gradually produces the seven factors of awakening in sequence. After they are gradually produced in sequence, he cultivates their fulfillment.”
 {: #p8}
 
-9\. After the Buddha taught this sūtra, the monks who heard what he taught rejoiced and approved.
+9\. After the Buddha spoke this sūtra, the monks who heard what he taught rejoiced and approved.
 {: #p9}
+
+---
+
+### Notes
+
+1. {:#n1} This sūtra has a similar point of departure as [SN 46.5](https://suttacentral.net/sn46.5){:target="_blank"} and [SĀ 12.30-33](SA12_30.html){:target="_blank"}. [\[back\]](#ref1)
+2. {:#n2} It would seem from this translator note that the fully expanded sutra repeated the seven factors of awakening for each step of the four abodes of mindfulness. The Chinese translator mentions mindfulness of internal, external, and internal and external body, but he doesn’t mention these steps for the other three abodes of mindfulness. On the face value of his note, I count six repetitions of the seven factors. If we assume feelings, mind, and principles also have internal, external, and internal and external steps, then it would be twelve repetitions (i.e., three for each of the four abodes of mindfulness). [\[back\]](#ref2)
+
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 23 October 2022
 {: .revised}
 
 ---
