Proofs and edited SA 13.1-15 & index.

--- a/01_agama/samyukta/13/SA13_1.md
+++ b/01_agama/samyukta/13/SA13_1.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 13. Factors of the Noble Path | 1. The First Sign'
+title: 'The Related Discourses | 13. Factors of the Noble Path | 1 (748). The First Sign'
 type: kramdown
 base: ../../../
 previous: index.html
@@ -9,28 +9,31 @@ next: SA13_2.html
 
 # [The Related Discourses](../index.html)
 ## [13. Factors of the Noble Path](index.html)
-### 1. The First Sign
+### 1 (748). The First Sign
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Just as the first sign of sunrise is called the first light of dawn, thus is the first sign of a monk’s correct ending of suffering’s limit, that final limit of suffering, called right view. That right view can produce right intention, right speech, right action, right livelihood, right method, right mindfulness, and right concentration.
+2\. It was then that the Bhagavān addressed the monks, “Just as the first sign of sunrise is called the first light of dawn, thus is the first sign of a monk correctly reaching the end of suffering, that final limit of suffering, called right view. That right view can produce right intent, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.
 {:#p2}
 
-3\. “Because it produces the correct attainment of concentration, the noble disciple’s mind is correctly liberated from desire, anger, and delusion. Thus, his mind well liberated. The noble disciple attains this correct knowledge and vision: ‘My births have been ended; the religious practice has been established; and the task has been done. I myself know that I won’t be subject to a later existence.’”
+3\. “Because it produces the correct attainment of samādhi, the noble disciple’s mind is correctly liberated from desire, anger, and delusion. His mind is well liberated in this way. The noble disciple attains this correct knowledge and vision: ‘My births have been ended, the religious practice has been established, and the task has been done. I myself know that I won’t be subject to a later existence.’”
 {:#p3}
 
 4\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p4}
 
+---
+
 ### Notes
-1. {:#n1} This discourse is parallel to [SN 45.55](https://suttacentral.net/sn45.55){: target="_blank"}. It shares the metaphor of the rising sun and the identification of right view as the first sign of the end to suffering. [\[back\]](#ref1)
+
+1. {:#n1} This sūtra is parallel to [SN 45.50-55](https://suttacentral.net/sn45.50){: target="_blank"}. It shares the metaphor of the rising sun for the first sign of the eightfold path, but here the ultimate goal of ending suffering is the subject. Also, the Pali sutta has been developed into a set of variants that identify a number of things as the “first sign” of the eightfold path. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 1 November 2022
 {: .revised}
 
 ---
