--- a/01_agama/samyukta/13/SA13_14.md
+++ b/01_agama/samyukta/13/SA13_14.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 13. The Noble Path | 14. Trainees and Non-Trainees'
+title: 'The Related Discourses | 13. The Noble Path | 14 (761). Trainees and Adepts'
 type: kramdown
 base: ../../../
 previous: SA13_13.html
@@ -9,25 +9,28 @@ next: SA13_15.html
 
 # [The Related Discourses](../index.html)
 ## [13. Factors of the Noble Path](index.html)
-### 14. Trainees and Non-Trainees
+### 14 (761). Trainees and Adepts
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha stayed in the kingdom of Śrāvastī at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. At that time, the Bhagavān addressed the monks, “I will explain the trainee and non-trainee. Listen closely and well consider it. What is a trainee? It means a trainee’s accomplishment of right view and a trainee’s accomplishment of right intention, right speech, right action, right effort, right mindfulness, and right concentration. This is called a trainee. What is a non-trainee? It means a non-trainee’s accomplishment of right view and a non-trainee’s accomplishment of right intention, right speech, right action, right effort, right mindfulness, and right concentration. This is called a non-trainee.”
+2\. It was then that the Bhagavān addressed the monks, “I will explain the trainee and the adept. Listen closely and consider it well. What is a trainee? It means a trainee’s accomplishment of right view … right intent … right speech … right action … right method … right mindfulness … accomplishment of right samādhi. This is called a trainee. What is an adept? It means an adept’s accomplishment of right view … right intent … right speech … right action … right method … right mindfulness … accomplishment of right samādhi. This is called an adept.”
 {:#p2}
 
-3\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and approved.
+3\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p3}
 
+---
+
 ### Notes
-1. {:#n1}This sutra is parallel to [<em>SN</em> 45.13](https://suttacentral.net/sn45.13){:target="_blank"}, but it only mentions the trainee in relation to the eightfold path. [\[back\]](#ref1)
+
+1. {:#n1}This sūtra is parallel to [SN 45.13](https://suttacentral.net/sn45.13){:target="_blank"}, but the Pali sutta only mentions the trainee in relation to the eightfold path. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 3 November 2019
+Last Revised: 1 November 2022
 {: .revised}
 
 ---
