--- a/01_agama/samyukta/13/SA13_15.md
+++ b/01_agama/samyukta/13/SA13_15.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 13. The Noble Path | 15. Correct Men and Great Men'
+title: 'The Related Discourses | 13. The Noble Path | 15 (761). Correct Men and Great Men'
 type: kramdown
 base: ../../../
 previous: SA13_14.html
@@ -9,26 +9,29 @@ next: SA13_16.html
 
 # [The Related Discourses](../index.html)
 ## [13. Factors of the Noble Path](index.html)
-### 15. Correct Men and Great Men
+### 15 (761). Correct Men and Great Men
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha stayed in the kingdom of Śrāvastī at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. At that time, the Bhagavān addressed the monks, “I will explain the correct man and the great man.[\[2\]](#n1){:#ref2} Listen closely and well consider it. What is a correct man? It means a correct man’s accomplishment of right view and a correct man’s accomplishment of right intention, right speech, right action, right effort, right mindfulness, and right concentration. This is called a correct man. What is the great man? It means the great man’s accomplishment of right view and a great man’s accomplishment of right intention, right speech, right action, right effort, right mindfulness, and right concentration. This is called a great man.”
+2\. It was then that the Bhagavān addressed the monks, “I will explain the correct man and the great man.[\[2\]](#n2){:#ref2} Listen closely and consider it well. What is a correct man? It means a correct man’s accomplishment of right view … right intention … right speech … right action … right method … right mindfulness … accomplishment of right samādhi. This is called a correct man. What is the great man? It means the great man’s accomplishment of right view … right intention … right speech … right action … right method … right mindfulness … accomplishment of right samādhi. This is called a great man.”
 {:#p2}
 
-3\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and approved.
+3\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p3}
 
+---
+
 ### Notes
-1. {:#n1}This sutra is reconstituted from a description that follows SA 13.14 at 200a22. [\[back\]](#ref1)
-2. {:#n2}<em>Correct man and great man</em>. These are literal translations of 正士 and 大士. They were likely translations of sat-puruṣa and mahā-puruṣa. [\[back\]](#ref2)
+
+1. {:#n1}This sūtra is reconstituted according to a variant note that follows [SĀ 13.14](SA13_14.html){:target="_blank"}, which substitutes “correct man” and “great man” for “trainee” and “adept.” [\[back\]](#ref1)
+2. {:#n2}*Correct man and great man*. These are literal translations of C. 正士 and 大士. They were likely translations of S. *sat-puruṣa* and *mahā-puruṣa*. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 4 November 2019
+Last Revised: 1 November 2022
 {: .revised}
 
 ---
