--- a/01_agama/samyukta/13/SA13_4.md
+++ b/01_agama/samyukta/13/SA13_4.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 13. Factors of the Noble Path | 4. The Correct Task'
+title: 'The Related Discourses | 13. Factors of the Noble Path | 4 (751). The Right Tasks'
 type: kramdown
 base: ../../../
 previous: SA13_3.html
@@ -9,15 +9,15 @@ next: SA13_5.html
 
 # [The Related Discourses](../index.html)
 ## [13. Factors of the Noble Path](index.html)
-### 4. The Right Tasks
+### 4 (751). The Right Tasks
 
 1\. Thus I have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “If someone at home or who has left home undertakes the wrong tasks, that is not taught by me. Why is that? Someone living at home or has left home who undertakes the wrong tasks won’t be happy with the correct teaching. What are the wrong tasks? They refer to wrong view … wrong concentration.
+2\. It was then that the Bhagavān addressed the monks, “If someone at home or who has left home undertakes the wrong tasks, that is not taught by me. Why is that? Someone living at home or has left home who undertakes the wrong tasks won’t be happy with the correct teaching. What are the wrong tasks? They refer to wrong view … wrong samādhi.
 {:#p1}
 
-3\. “If someone living at home or has left home who undertakes the right tasks, that is praised by me. Why is that? Someone who undertakes the right tasks is happy with the correct teaching and good at the correct teaching. What are the right tasks? They are right view … right concentration.”
+3\. “If someone living at home or who has left home undertakes the right tasks, that is praised by me. Why is that? Someone who undertakes the right tasks is happy with the correct teaching and good at the correct teaching. What are the right tasks? They are right view … right samādhi.”
 {:#p1}
 
 4\. The Bhagavān then spoke in verse:
@@ -36,14 +36,17 @@ With the unsurpassed, correct teaching.”
 5\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p1}
 
+---
+
 ### Notes
-1. {:#n1} This discourse is parallel with [SN 45.24](https://suttacentral.net/sn45.55){: target="_blank"}. [\[back\]](#ref1)
+
+1. {:#n1} This sūtra is parallel with [SN 45.24](https://suttacentral.net/sn45.24){: target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 1 November 2022
 {: .revised}
 
 ---
