--- a/01_agama/samyukta/13/SA13_8.md
+++ b/01_agama/samyukta/13/SA13_8.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 13. Factors of the Noble Path | 8. Desire (2)'
+title: 'The Related Discourses | 13. Factors of the Noble Path | 8 (755). Desire (2)'
 type: kramdown
 base: ../../../
 previous: SA13_7.html
@@ -9,12 +9,12 @@ next: SA13_9.html
 
 # [The Related Discourses](../index.html)
 ## [13. Factors of the Noble Path](index.html)
-### 8. Desire (2)
+### 8 (755). Desire (2)
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “There’s the expression ‘desire.’ What is it that’s called ‘desire’? Desire refers to the qualities of the five desires. What are the five? They are forms that are cognized by the eye and that are lovely, agreeable, memorable, and nurture sensual pleasures. Thus, they are the contacts that are cognized by the ear … nose … tongue … body and that are lovely, agreeable, memorable, and nurture sensual pleasures. This is called desire but that is not desire. It’s the craving for them that’s called desire.”
+2\. It was then that the Bhagavān addressed the monks, “There’s the expression ‘desire.’ What is it that’s called ‘desire’? Desire refers to the qualities of the five desires. What are the five? They are forms cognized by the eye that are lovely, agreeable, memorable, and nurture sensual pleasures. Thus, they are the contacts cognized by the ear … nose … tongue … body that are lovely, agreeable, memorable, and nurture sensual pleasures. They are called desires, but that is not desire. It’s the craving for them that’s called desire.”
 {:#p2}
 
 3\. The Bhagavān then spoke in verse,
@@ -30,19 +30,22 @@ But the practitioner ends his mind’s desires.”
 4\. The monks said to the Buddha, “Bhagavān, isn’t there a path and steps to ending this craving desire?”
 {:#p4}
 
-The Buddha told the monks, “There is the right eightfold path that can end craving desire, which is right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, and right concentration.”
+The Buddha told the monks, “There is the right eightfold path that can end craving desire, which is right view, right intent, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.”
 
 5\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p5}
 
+---
+
 ### Notes
-1. {:#n1} This sūtra is reconstituted from a description of variants found after [SĀ 13.7](SA13_7.html). It’s a variant of [SĀ 13.5](SA13_5.html) in which the Buddha questions the monks rather than being asked a question by the monk Kāma. It’s also parallel to [SN 45.30](https://suttacentral.net/sn45.30){: target="_blank"}. [\[back\]](#ref1)
+
+1. {:#n1} This sūtra is reconstituted from a description of variants found after [SĀ 13.7](SA13_7.html){: target="_blank"}. It is a variant of [SĀ 13.5](SA13_5.html){: target="_blank"}, in which the Buddha questions the monks rather than being asked a question by the monk Kāma. It’s parallel to [SN 45.30](https://suttacentral.net/sn45.30){: target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 1 November 2022
 {: .revised}
 
 ---
