--- a/01_agama/samyukta/13/SA13_10.md
+++ b/01_agama/samyukta/13/SA13_10.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 13. Factors of the Noble Path | 10. Requirements (2)'
+title: 'The Related Discourses | 13. Factors of the Noble Path | 10 (757). Requirements (2)'
 type: kramdown
 base: ../../../
 previous: SA13_9.html
@@ -9,26 +9,29 @@ next: SA13_11.html
 
 # [The Related Discourses](../index.html)
 ## [13. Factors of the Noble Path](index.html)
-### 10. Requirements (2)
+### 10 (757). Requirements (2)
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Buddha addressed the monks, “There’s the expression ‘roots and requirements of the noble ones’ concentration.’ What are these ‘roots and requirements of the noble ones’ concentration’? That refers to the seven parts of the right path that are both the roots and requirements of the noble ones’ concentration. What are the seven? They are right view, right intention, right speech, right action, right livelihood, right method, and right mindfulness. Śāriputra, after someone has come into possession of these seven parts of the path, they gain oneness of mind. These are called the roots and requirements of the noble ones’ concentration.”
+2\. It was then that the Buddha addressed the monks, “There’s the expression ‘roots and requirements of the noble ones’ samādhi.’ What are these ‘roots and requirements of the noble ones’ samādhi’? That refers to the seven parts of the right path that are both the roots and requirements of the noble ones’ samādhi. What are the seven? They are right view, right intent, right speech, right action, right livelihood, right method, and right mindfulness. After someone has come to possess these seven parts of the path, they gain oneness of mind. These are called the roots and requirements of the noble ones’ samādhi.”
 {:#p2}
 
 3\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p3}
 
+---
+
 ### Notes
-1. {:#n1} This sūtra is reconstituted from a description of variants found after [SĀ 13.7](SA13_7.html). It’s a variant of [SĀ 13.7](SA13_6.html) in which the Buddha questions the monks rather than being asked a question by Śāriputra. It’s also parallel to [SN 45.28](https://suttacentral.net/sn45.28){: target="_blank"}. [\[back\]](#ref1)
+
+1. {:#n1} This sūtra is reconstituted from a description of variants found after [SĀ 13.7](SA13_7.html){: target="_blank"}. It is a variant of [SĀ 13.7](SA13_7.html){: target="_blank"}, in which the Buddha questions the monks rather than being asked a question by Śāriputra. It’s parallel to [SN 45.28](https://suttacentral.net/sn45.28){: target="_blank"}. [\[back\]](#ref1)
 
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 1 November 2022
 {: .revised}
 
 ---
