--- a/01_agama/samyukta/13/SA13_12.md
+++ b/01_agama/samyukta/13/SA13_12.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 13. Factors of the Noble Path | 12. Sensation'
+title: 'The Related Discourses | 13. Factors of the Noble Path | 12 (759). Feeling'
 type: kramdown
 base: ../../../
 previous: SA13_11.html
@@ -9,34 +9,37 @@ next: SA13_13.html
 
 # [The Related Discourses](../index.html)
 ## [13. Factors of the Noble Path](index.html)
-### 12. Sensation
+### 12 (759). Feeling
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha stayed in the kingdom of Śrāvastī at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks,  “There are three sensations that are impermanent, conditioned, and dependently arisen. What are the three? They are pleasant sensations, painful sensations, and sensations that are neither pleasant nor painful.”
+2\. It was then that the Bhagavān addressed the monks, “There are three feelings that are impermanent, conditioned, and dependently arisen. What are the three? They are pleasant feeling, painful feeling, and feeling that’s neither pleasant nor painful.”
 {:#p2}
 
-3\. The monks asked the Buddha, “Bhagavān, isn’t there a path and steps that put an end of these three sensations when cultivated and cultivated often?”
+3\. The monks asked the Buddha, “Bhagavān, isn’t there a path and steps that put an end of these three feelings when cultivated and cultivated often?”
 {:#p3}
 
-4\. The Buddha told the monks, “There is a path and steps that put an end to these three sensations when cultivated and cultivated often. What is that path and those steps that put an end to these three sensations when cultivated and cultivated often?”
+4\. The Buddha told the monks, “There is a path and steps that put an end to these three feelings when cultivated and cultivated often. What is that path and those steps that put an end to these three feelings when cultivated and cultivated often?”
 {:#p4}
 
-5\. The Buddha told the monks, “They are the noble eightfold path and right view, right intention, right speech, right action, right livelihood, right effort, right mindfulness, and right concentration.”
+5\. The Buddha told the monks, “They are the noble eightfold path and right view, right intent, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.”
 {:#p5}
 
-6\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and approved.
+6\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p6}
 
+---
+
 ### Notes
-1. {:#n1} This sutra is parallel to [<em>SN</em> 45.29](https://suttacentral.net/sn45.29){:target="_blank"}. [\[back\]](#ref1)
+
+1. {:#n1} This sūtra is parallel to [SN 45.29](https://suttacentral.net/sn45.29){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {:.translator}
-Last Revised: 3 November 2019
+Last Revised: 1 November 2022
 {:.revised}
 
 ---
