--- a/01_agama/samyukta/13/SA13_13.md
+++ b/01_agama/samyukta/13/SA13_13.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 13. The Noble Path | 13. Disagreeable Things'
+title: 'The Related Discourses | 13. The Noble Path | 13 (760). Disagreeable Things'
 type: kramdown
 base: ../../../
 previous: SA13_12.html
@@ -9,31 +9,34 @@ next: SA13_14.html
 
 # [The Related Discourses](../index.html)
 ## [13. Factors of the Noble Path](index.html)
-### 13. Disagreeable Things
+### 13 (760). Disagreeable Things
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha stayed in the kingdom of Śrāvastī at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “The world has three things that are disagreeable, unattractive, and immemorable. What are the three? They are old age, illness, and death. These three things are disagreeable, unattractive, and immemorable. If the world didn’t have these three things that are disagreeable, unattractive, and immemorable, there wouldn’t be a Tathāgata, an Arhat, or a Perfectly Awakened One who appears in it. The world wouldn’t know there was a teaching, instruction, or guidance taught by the Tathāgata, either. The Tathāgata, the Arhat, and the Perfectly Awakened One appears in the world because it has these three things that are disagreeable, unattractive, and immemorable, and the world does know that there is a teaching, instruction, and guidance taught by the Tathāgata.”
+2\. It was then that the Bhagavān addressed the monks, “The world has three things that are disagreeable, unattractive, and immemorable. What are the three? They are old age, illness, and death. These three things are disagreeable, unattractive, and immemorable. If the world didn’t have these three things that are disagreeable, unattractive, and immemorable, there wouldn’t be a Tathāgata, an Arhat, or a Completely Awakened One who appears in it. The world wouldn’t know there was a teaching, instruction, or guidance taught by the Tathāgata, either. The Tathāgata, the Arhat, and the Completely Awakened One appears in the world because it has these three things that are disagreeable, unattractive, and immemorable, and the world does know that there is a teaching, instruction, and guidance taught by the Tathāgata.”
 {:#p2}
 
 3\. The monks asked the Buddha, “Isn’t there a path and steps that put an end to these three things that are disagreeable, unattractive, and immemorable?”
 {:#p3}
 
-4\. The Buddha told the monks, “There is a path and steps that put an end to these three things that are disagreeable, unattractive, and immemorable when cultivated and cultivated often. What is that path and those steps that put an end to these three things that are disagreeable, unattractive, and immemorable when cultivated and cultivated often? It’s the noble eightfold path and right view, right intention, right speech, right action, right effort, right mindfulness, and right concentration.”
+4\. The Buddha told the monks, “There is a path and steps that put an end to these three things that are disagreeable, unattractive, and immemorable when cultivated and cultivated often. What is that path and those steps that put an end to these three things that are disagreeable, unattractive, and immemorable when cultivated and cultivated often? It’s the noble eightfold path and right view, right intent, right speech, right action, right method, right mindfulness, and right samādhi.”
 {:#p4}
 
-5\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and approved.
+5\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p5}
 
+---
+
 ### Notes
-1. {:#n1} This sutra’s introduction is parallel to Pali [<em>AN</em> 10.76](https://suttacentral.net/an10.76){:target="_blank"}, but it lacks the remainder of that sutta. Another difference is that the Pali lists birth, old age, and death as the three disagreeable things. A similar passage is also found in the beginning of SA 3.25. [\[back\]](#ref1)
+
+1. {:#n1} This sūtra’s introduction parallels that found in [AN 10.76](https://suttacentral.net/an10.76){:target="_blank"}, but it lacks the remainder of that sutta. Another difference is that the Pali lists birth, old age, and death as the three things that cause the arising of the Tathāgata. A similar passage is found in the beginning of SĀ 3.25. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 3 November 2019
+Last Revised: 1 November 2022
 {: .revised}
 
 ---
