--- a/01_agama/samyukta/13/SA13_3.md
+++ b/01_agama/samyukta/13/SA13_3.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 13. Factors of the Noble Path | 3. The Roots of Good and Bad'
+title: 'The Related Discourses | 13. Factors of the Noble Path | 3 (750). The Roots of Good and Bad'
 type: kramdown
 base: ../../../
 previous: SA13_2.html
@@ -9,18 +9,18 @@ next: SA13_4.html
 
 # [The Related Discourses](../index.html)
 ## [13. Factors of the Noble Path](index.html)
-### 3. The Roots of Good and Bad
+### 3 (750). The Roots of Good and Bad
 
 1\. Thus I have I heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Monks, if bad and unwholesome things arise, they all have ignorance as their root. Ignorance collects them, ignorance gives rise to them, and ignorance produces them. Why is that? Ignorance is the lack of knowing. Wholesome and unwholesome [198c] things aren’t known as they really are. What’s blameworthy and blameless, lower and higher teachings, what’s stained and stainless, what’s discerned and not discerned, and what’s dependently arisen and not dependently arisen aren’t known as they really are. Not knowing them as they really are, a person produces wrong views. After producing wrong views, that can produce wrong intention, wrong speech, wrong action, wrong livelihood, wrong method, wrong mindfulness, and wrong concentration.
+2\. It was then that the Bhagavān addressed the monks, “Monks, if bad and unskillful things arise, they all have ignorance as their root. Ignorance collects them, ignorance gives rise to them, and ignorance produces them. Why is that? Ignorance is the lack of knowing. Things that are good and not good aren’t truly known. What’s blameworthy and blameless, lower and higher teachings, what’s stained and stainless, what’s discerned and not discerned, and what’s dependently arisen and not dependently arisen aren’t truly known. Not truly knowing them, a person produces wrong view. After wrong view is produced, it can produce wrong intent, wrong speech, wrong action, wrong livelihood, wrong method, wrong mindfulness, and wrong samādhi.
 {:#p2}
 
-3\. “If good things arise, they all have insight as their root. Insight collects them, insight gives rise to them, and insight produces them. With insight, a person knows wholesome and unwholesome things as they really are. What’s blameworthy and blameless, what to know well and what not to know well, inferior and superior things, what’s polluted and clean, what’s discerned and not discerned, and what’s dependently arisen and not dependently arisen are known as they really are. Knowing things as they really are is right view. Right view can produce right intention, right speech, right action, right livelihood, right method, right mindfulness, and right concentration.
+3\. “If good things arise, they all have insight as their root. Insight collects them, insight gives rise to them, and insight produces them. With insight, a person truly knows that things are good or not good. What’s blameworthy and blameless, what to know well and what not to know well, inferior and superior things, what’s polluted and clean, what’s discerned and not discerned, and what’s dependently arisen and not dependently arisen are truly known. Truly knowing these things is right view. Right view can produce right intent, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.
 {:#p3}
 
-4\. “After right concentration is produced, the noble disciple attains correct liberation from desire, anger, and delusion. After he’s liberated from desire, anger, and delusion, the noble disciple gains this correct knowledge and vision: ‘My births have been ended; the religious practice has been established; and the task has been done. I myself know that I won’t be subject to a later existence.’”
+4\. “After right samādhi is produced, the noble disciple attains correct liberation from desire, anger, and delusion. After they’re liberated from desire, anger, and delusion, the noble disciple gains this correct knowledge and vision: ‘My births have been ended, the religious practice has been established, and the task has been done. I myself know that I won’t be subject to a later existence.’”
 {:#p4}
 
 5\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
@@ -30,7 +30,7 @@ next: SA13_4.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 1 November 2022
 {: .revised}
 
 ---
