--- a/01_agama/samyukta/13/SA13_5.md
+++ b/01_agama/samyukta/13/SA13_5.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 13. Factors of the Noble Path | 5. Desire'
+title: 'The Related Discourses | 13. Factors of the Noble Path | 5 (752). Desire'
 type: kramdown
 base: ../../../
 previous: SA13_4.html
@@ -9,7 +9,7 @@ next: SA13_6.html
 
 # [The Related Discourses](../index.html)
 ## [13. Factors of the Noble Path](index.html)
-### 5. Desire
+### 5 (752). Desire
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
@@ -17,7 +17,7 @@ next: SA13_6.html
 2\. It was then that the monk Kāma went to the Buddha, prostrated at his feet, and withdrew to sit at one side. He said, “Bhagavān, there’s the expression ‘desire.’ What is it that’s called ‘desire’?”
 {:#p2}
 
-[199a] The Buddha told Kāma, “Desire refers to the qualities of the five desires. What are the five? They are forms that are cognized by the eye and that are lovely, agreeable, memorable, and nurture sensual pleasures. Thus, they are the contacts that are cognized by the ear … nose … tongue … body and that are lovely, agreeable, memorable, and nurture sensual pleasures. This is called desire but that is not desire. It’s the craving for them that’s called desire.”
+The Buddha told Kāma, “Desire refers to the qualities of the five desires. What are the five? They are forms cognized by the eye that are lovely, agreeable, memorable, and nurture sensual pleasures. Thus, they are the contacts cognized by the ear … nose … tongue … body that are lovely, agreeable, memorable, and nurture sensual pleasures. They are called desires, but that is not desire. It’s the craving for them that’s called desire.”
 
 3\. The Bhagavān then spoke in verse,
 {:#p3}
@@ -32,19 +32,22 @@ But the practitioner ends his mind’s desires.”
 4\. The monk Kāma said to the Buddha, “Bhagavān, isn’t there a path and steps to ending this craving desire?”
 {:#p4}
 
-The Buddha told the monk, “There is the right eightfold path that can end craving desire, which is right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, and right concentration.”
+The Buddha told the monk, “There is the right eightfold path that can end craving desire, which is right view, right intent, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.”
 
 5\. After the Buddha spoke this sūtra, the monk Kāma heard what the Buddha taught, rejoiced, and approved.
 {:#p5}
 
+---
+
 ### Notes
-1. {:#n1} This discourse is parallel with [SN 45.30](https://suttacentral.net/sn45.30){: target="_blank"}, but in the Pali version the interlocutor is Uttiya. Kāma may well be the same monk known as Kāmabhū in Pali sources who asks about similar topics in SN [35.233](https://suttacentral.net/sn35.233){: target="_blank"} and [SN 41.6](https://suttacentral.net/sn41.6){: target="_blank"}. [\[back\]](#ref1)
+
+1. {:#n1} This sūtra is parallel with [SN 45.30](https://suttacentral.net/sn45.30){: target="_blank"}, but in the Pali version the interlocutor is Uttiya. Kāma may well be the same monk known as Kāmabhū in Pali sources who asks about similar topics in [SN 35.233](https://suttacentral.net/sn35.233){: target="_blank"} and [SN 41.6](https://suttacentral.net/sn41.6){: target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 1 November 2022
 {: .revised}
 
 ---
