--- a/01_agama/samyukta/13/SA13_6.md
+++ b/01_agama/samyukta/13/SA13_6.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 13. Factors of the Noble Path | 6. Immortality'
+title: 'The Related Discourses | 13. Factors of the Noble Path | 6 (753). Immortality'
 type: kramdown
 base: ../../../
 previous: SA13_5.html
@@ -9,33 +9,36 @@ next: SA13_7.html
 
 # [The Related Discourses](../index.html)
 ## [13. Factors of the Noble Path](index.html)
-### 6. Immortality
+### 6 (753). Immortality
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. There was then a monk named Ariṣṭa who went to the Buddha, prostrated at his feet, and withdrew to sit at one side. He said to the Buddha, “Bhagavān, there’s the expression ‘immortal.’[\[2\]](#n1){:#ref2} What is it that’s called ‘immortal’?”
+2\. It was then that a monk named Ariṣṭa went to the Buddha, prostrated at his feet, and withdrew to sit at one side. He said to the Buddha, “Bhagavān, there’s the expression ‘immortal.’[\[2\]](#n1){:#ref2} What is it that’s called ‘immortal’?”
 {:#p2}
 
 Buddha told Ariṣṭa, “’Immortal’ is the name of a realm, but I take it to be the end of the contaminants of existence. That’s a clear explanation of this name.”
 
-3\. The monk Ariṣṭa said to the Buddha, “Bhagavān, isn’t there a path and steps to attaining immortality when they are cultivated and cultivated often?”
+3\. The monk Ariṣṭa said to the Buddha, “Bhagavān, isn’t there a path and steps to attaining immortality when cultivated and cultivated often?”
 {:#p3}
 
-The Buddha addressed the monk, “There is. It’s known as the noble eightfold path, which is right view … right concentration.”
+The Buddha addressed the monk, “There is. It’s known as the noble eightfold path, which is right view … right samādhi.”
 
 4\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p4}
 
+---
+
 ### Notes
-1. {:#n1} This discourse is partially parallel with [SN 45.7](https://suttacentral.net/sn45.7){: target="_blank"}, which contains a question about the “deathless” (P. amata) and equating it with the end of desire, anger, and delusion. [\[back\]](#ref1)
-2. {:#n2} The Chinese translates Skt. amṛta as ‘sweet dew’ 甘露, which was a mythical substance in Chinese legends. Amṛta was probably the inspiration for the Greek myth of ambrosia, as both were the food of the gods that gave them immortality. [\[back\]](#ref2)
+
+1. {:#n1} This sūtra is partially parallel with [SN 45.7](https://suttacentral.net/sn45.7){: target="_blank"}, which contains a question about the “deathless” and equates it with the end of desire, anger, and delusion. [\[back\]](#ref1)
+2. {:#n2}*immortal*. C. 甘露, P. *amata*, S. *amṛta*. The Chinese translates S. *amṛta* as ‘sweet dew,’ which was a mythical substance in Chinese legends. *Amṛta* was probably the inspiration for the Greek myth of ambrosia, as both were the food of the gods that gave them immortality. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 1 November 2022
 {: .revised}
 
 ---
