--- a/01_agama/samyukta/13/SA13_16.md
+++ b/01_agama/samyukta/13/SA13_16.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 13. The Noble Path | 16. The Noble End of Contaminants'
+title: 'The Related Discourses | 13. The Noble Path | 16 (762). The Noble End of Contaminants'
 type: kramdown
 base: ../../../
 previous: SA13_15.html
@@ -9,22 +9,22 @@ next: SA13_17.html
 
 # [The Related Discourses](../index.html)
 ## [13. Factors of the Noble Path](index.html)
-### 16. The Noble End of Contaminants
+### 16 (762). The Noble End of Contaminants
 
-1\. Thus have I heard: One time, the Buddha stayed in the kingdom of Śrāvastī at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus have I heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “I will explain the noble end of contaminants. What is the noble end of contaminants? It means the non-trainee’s accomplishment of right view up to the non-trainee’s accomplishment of right concentration. This is called the noble end of contaminants.”
+2\. It was then that the Bhagavān addressed the monks, “I will explain the noble end of contaminants. What is the noble end of contaminants? It means the adept’s accomplishment of right view … the adept’s accomplishment of right samādhi. This is called the noble end of contaminants.”
 {:#p2}
 
-3\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and approved.
+3\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p3}
 
 ---
 
 Translator: Charles Patton
 {:.translator}
-Last Revised: 4 November 2019
+Last Revised: 25 November 2022
 {:.revised}
 
 ---
