--- a/01_agama/samyukta/13/SA13_17.md
+++ b/01_agama/samyukta/13/SA13_17.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 13. The Noble Path | 17. The Factors of the Path'
+title: 'The Related Discourses | 13. The Noble Path | 17 (763). The Factors of the Path'
 type: kramdown
 base: ../../../
 previous: SA13_16.html
@@ -9,22 +9,22 @@ next: SA13_18.html
 
 # [The Related Discourses](../index.html)
 ## [13. Factors of the Noble Path](index.html)
-### 17. The Factors of the Path
+### 17 (763). The Factors of the Path
 
-1\. Thus have I heard: One time, the Buddha stayed in the kingdom of Śrāvastī at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus have I heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. At that time, the Bhagavān addressed the monks, “Now, I will explain the eight factors of the noble path. What are the eight? They are right view, right intention, right speech, right action, right livelihood, right effort, right mindfulness, and right concentration.”
+2\. It was then that the Bhagavān addressed the monks, “Now, I will explain the eight factors of the noble path. What are the eight? They are right view, right intent, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.”
 {:#p2}
 
-3\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and approved.
+3\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p3}
 
 ---
 
 Translator: Charles Patton
 {:.translator}
-Last Revised: 4 November 2019
+Last Revised: 25 November 2022
 {:.revised}
 
 ---
