--- a/01_agama/samyukta/13/SA13_18.md
+++ b/01_agama/samyukta/13/SA13_18.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 13. The Noble Path | 18. Cultivation of the Noble Path'
+title: 'The Related Discourses | 13. The Noble Path | 18 (764). Cultivation of the Noble Path'
 type: kramdown
 base: ../../../
 previous: SA13_17.html
@@ -9,25 +9,25 @@ next: SA13_19.html
 
 # [The Related Discourses](../index.html)
 ## [13. Factors of the Noble Path](index.html)
-### 18. Cultivation of the Noble Path
+### 18 (764). Cultivation of the Noble Path
 
-1\. Thus have I heard: One time, the Buddha stayed in the kingdom of Śrāvastī at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus have I heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Now, I will explain the cultivation of the noble eightfold path. Listen closely and well consider it.
+2\. It was then that the Bhagavān addressed the monks, “Now, I will explain the cultivation of the noble eightfold path. Listen closely and consider it well.
 {:#p2}
 
-3\. “What is the cultivation of the noble eightfold path? Here, a monk cultivates right view, relying on seclusion, having no desire, cessation, and an orientation towards renunciation. He cultivates right intention, right speech, right action, right livelihood, right effort, right mindfulness, and right concentration, relying on seclusion, having no desire, cessation, and an orientation towards renunciation. This is called cultivating the noble eightfold path.”
+3\. “What is the cultivation of the noble eightfold path? Here, a monk cultivates right view, relying on seclusion, the lack of desire, cessation, and an orientation towards renunciation … cultivates right intent … right speech … right action … right livelihood … right method … right mindfulness … right samādhi, relying on seclusion, the lack of desire, cessation, and an orientation towards renunciation. This is called cultivating the noble eightfold path.”
 {:#p3}
 
-4\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and approved.
+4\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p4}
 
 ---
 
 Translator: Charles Patton
 {:.translator}
-Last Revised: 4 November 2019
+Last Revised: 25 November 2022
 {:.revised}
 
 ---
