--- a/01_agama/samyukta/13/SA13_20.md
+++ b/01_agama/samyukta/13/SA13_20.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 13. The Noble Path | 20. Arising of the Noble Path'
+title: 'The Related Discourses | 13. The Noble Path | 20 (766). The Arising of the Noble Path'
 type: kramdown
 base: ../../../
 previous: SA13_19.html
@@ -8,25 +8,32 @@ next: SA13_21.html
 ---
 # [The Related Discourses](../index.html)
 ## [13. Factors of the Noble Path](index.html)
-### 20. Arising of the Noble Path
+### 20 (766). The Arising of the Noble Path
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha stayed in the kingdom of Śrāvastī at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, Suppose a monk’s right view is pure, cleansed, without fault, and free of afflictions. “When it has yet to happen, it doesn’t happen except by the discipline of the Buddha ... *up to right concentration are likewise described*. Suppose right view is pure, cleansed, without fault, and free of afflictions. When it has yet to happen, it can happen ... *up to right concentration are likewise described*.”
+2\. It was then that the Bhagavān addressed the monks, “Suppose a monk’s right view is pure, cleansed, without fault, and free of afflictions. This never happens except when he’s disciplined by a buddha … [right samādhi is pure, cleansed, without fault, and free of afflictions. This never happens except when he’s disciplined by a Buddha.]
 {:#p2}
 
-3\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and approved.
+3\. “Suppose a monk’s right view is pure, cleansed, without fault, and free of afflictions. This can only happen when he’s [disciplined by a buddha … right samādhi is pure, cleansed, without fault, and free of afflictions. This can only happen when he’s disciplined by a buddha.]” [\[2\]](#n2){:#ref2}
 {:#p3}
 
+4\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
+{:#p4}
+
+---
+
 ### Notes
-1. {:#n1}This sutra is parallel to [*SN* 45.16](https://suttacentral.net/sn45.16){:target="_blank"}. [\[back\]](#ref1)
+
+1. {:#n1}This sūtra is similar to [SN 45.15](https://suttacentral.net/sn45.15){:target="_blank"} and [16](https://suttacentral.net/sn45.16){:target="_blank"}. [\[back\]](#ref1)
+2. {:#n2} The translator has abbreviated the sūtra substantially. I’ve partially reconstituted it to make it more intelligible. The full recitation would make the same statements for all eight factors of the noble path. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {:.translator}
-Last Revised: 5 November 2019
+Last Revised: 25 November 2022
 {:.revised}
 
 ---
