--- a/01_agama/samyukta/13/SA13_19.md
+++ b/01_agama/samyukta/13/SA13_19.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 13. The Noble Path | 19. Past and Future Cultivation'
+title: 'The Related Discourses | 13. The Noble Path | 19 (765). Past and Future Cultivation'
 type: kramdown
 base: ../../../
 previous: SA13_18.html
@@ -9,22 +9,32 @@ next: SA13_20.html
 
 # [The Related Discourses](../index.html)
 ## [13. Factors of the Noble Path](index.html)
-### 19. Past and Future Cultivation
+### 19 (765). Past and Future Cultivation
 
-1\. Thus have I heard: One time, the Buddha stayed in the kingdom of Śrāvastī at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus have I heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Now, I will explain a monk’s past cultivation of the noble eightfold path and future cultivation of the noble eightfold path.” *And so on [like the previous sutra].*
+2\. It was then that the Bhagavān addressed the monks, “Now, I will explain a monk’s past cultivation of the noble eightfold path and future cultivation of the noble eightfold path. [Listen closely and consider it well.]”
 {:#p2}
 
-3\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and approved.
+3\. [“What is the cultivation of the noble eightfold path? Here, a monk cultivates right view, relying on seclusion, the lack of desire, cessation, and an orientation towards renunciation … cultivates right intent … right speech … right action … right livelihood … right method … right mindfulness … right samādhi, relying on seclusion, the lack of desire, cessation, and an orientation towards renunciation. This is called cultivating the noble eightfold path.”] [\[1\]](#n1){:#ref1}
 {:#p3}
+
+4\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
+{:#p4}
+
+
+---
+
+### Notes
+
+1. {:#n1} The Chinese translator indicates an abbreviation from the opening to the closing statement. I’ve reconstituted it with material from the previous sūtra ([SĀ 13.18](SA13_18.html){: target="_blank"}). [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {:.translator}
-Last Revised: 5 November 2019
+Last Revised: 25 November 2022
 {:.revised}
 
 ---
