--- a/01_agama/samyukta/13/SA13_6.md
+++ b/01_agama/samyukta/13/SA13_6.md
@@ -17,7 +17,7 @@ next: SA13_7.html
 2\. It was then that a monk named Ariṣṭa went to the Buddha, prostrated at his feet, and withdrew to sit at one side. He said to the Buddha, “Bhagavān, there’s the expression ‘immortal.’[\[2\]](#n1){:#ref2} What is it that’s called ‘immortal’?”
 {:#p2}
 
-Buddha told Ariṣṭa, “’Immortal’ is the name of a realm, but I take it to be the end of the contaminants of existence. That’s a clear explanation of this name.”
+Buddha told Ariṣṭa, “‘Immortal’ is the name of a realm, but I take it to be the end of the contaminants of existence. That’s a clear explanation of this name.”
 
 3\. The monk Ariṣṭa said to the Buddha, “Bhagavān, isn’t there a path and steps to attaining immortality when cultivated and cultivated often?”
 {:#p3}
